alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ body {
     background: #060dd7;
     height: auto;
     display: flex;
-    justify-content: center;
+    justify-content: stretch;
     align-items: center;
     padding: 0;
 }
@@ -129,31 +129,30 @@ body {
     color: #F1F1F1;
     height: auto;
     width: 100%;
-    max-width: 1000px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     padding: 0px;
     margin: 0;
 
 }
 .contact-item {
-    color: #437505;
+    color: #1d2e09;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 16px;
     width: 100%;
-    max-width: 1000px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    text-transform: uppercase;
     padding: 0;
     margin: 0;
 }
 
 .footer-container {
-    background: #4e97b6;
+    background: #0b0b0b;
     display: flex;
     justify-content: center;
     align-items: center;
